--- a/app/src/main/res/layout/sounds_tab_main.xml
+++ b/app/src/main/res/layout/sounds_tab_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
@@ -13,6 +13,7 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="4dp">
 
+        <!--android:paddingBottom="60dp"-->
         <TableLayout
             android:id="@+id/tableLayout"
             android:layout_width="match_parent"
@@ -23,13 +24,15 @@
 
     </ScrollView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <!--android:layout_marginEnd="16dp"
+        android:layout_marginBottom="64dp"-->
+    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:backgroundTint="@color/black"
-        app:srcCompat="@android:drawable/ic_media_pause"/>
+        app:srcCompat="@android:drawable/ic_media_pause"/>-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
