--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#0F1E6D</color>
-    <color name="colorAccent">#303F9F</color>
+    <color name="colorPrimary">#D31E1E</color>
+    <color name="colorPrimaryDark">#8A0202</color>
+    <color name="colorAccent">#D31E1E</color>
 
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
