--- a/app/src/main/res/layout/favorites_tab_main.xml
+++ b/app/src/main/res/layout/favorites_tab_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="4dp">
 
         <TableLayout
-            android:id="@+id/tableLayout"
+            android:id="@+id/tableLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
@@ -22,5 +22,15 @@
             android:shrinkColumns="*"/>
 
     </ScrollView>
+
+    <TextView
+        android:id="@+id/empty_favorites_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textColor="@color/black"
+        android:text="@string/empty_favorites_text"
+        android:textAlignment="center"
+        android:layout_gravity="center"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
